--- a/mobile/src/main/res/xml/voice_interaction_service.xml
+++ b/mobile/src/main/res/xml/voice_interaction_service.xml
@@ -5,4 +5,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:sessionService="me.dgol.friday.voice.FridayVoiceInteractionService"
     android:recognitionService="me.dgol.friday.voice.FridayRecognitionService"
-    android:settingsActivity="me.dgol.friday.SettingsActivity" /> 
+    android:settingsActivity="me.dgol.friday.SettingsActivity"
+    android:supportsAssist="true"
+    android:supportsLaunchVoiceAssistFromKeyguard="true" />
